--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
               </li>
             </ul>
           </div>
-          <div class="form-stule">
+          <div class="form-style">
             <b>подпишитесь на рассылку</b>
             <input type="email" placeholder="E-mail" value="" name="email" />
             <button type="button" class="button-footer">Подписаться</button>
@@ -454,7 +454,7 @@
         <form class="subscription">
           <button data-modal-close class="close">
             <svg class="close-icon">
-              <use href="./images/sprite2.svg#form-close"></use>
+              <use href="./images/sprite.svg#form-close"></use>
             </svg>
           </button>
           <p>Оставьте свои данные, мы вам перезвоним</p>
@@ -468,7 +468,7 @@
             />
             <label for="name" class="field-text">Имя</label>
             <svg class="field-icon">
-              <use href="./images/sprite2.svg#form-name"></use>
+              <use href="./images/sprite.svg#form-name"></use>
             </svg>
           </div>
           <div class="field">
@@ -481,7 +481,7 @@
             />
             <label for="tel" class="field-text">Телефон</label>
             <svg class="field-icon">
-              <use href="./images/sprite2.svg#form-tel"></use>
+              <use href="./images/sprite.svg#form-tel"></use>
             </svg>
           </div>
           <div class="field">
@@ -494,7 +494,7 @@
             />
             <label for="mail" class="field-text">Почта</label>
             <svg class="field-icon">
-              <use href="./images/sprite2.svg#form-mail"></use>
+              <use href="./images/sprite.svg#form-mail"></use>
             </svg>
           </div>
           <div class="field field-style">
