--- a/portfolio.html
+++ b/portfolio.html
@@ -323,7 +323,7 @@
               </li>
             </ul>
           </div>
-          <div class="form-stule">
+          <div class="form-style">
             <b>подпишитесь на рассылку</b>
             <input type="email" placeholder="E-mail" value="" name="email" />
             <button type="button" class="button-footer">Подписаться</button>
